--- a/package.xml
+++ b/package.xml
@@ -377,6 +377,7 @@
     <name>Horde_Kolab_Storage</name>
     <channel>pear.horde.org</channel>
     <min>1.0.0beta1</min>
+    <max>2.0.0</max>
     <exclude>2.0.0</exclude>
    </package>
   </required>
