--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "pear-pear.php.net/HTTP_Request": "*",
         "pear-pear.horde.org/Horde_Icalendar": ">=2.0.0,<=3.0.0alpha1",
         "pear-pear.horde.org/Horde_Mime": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Translation": ">=2.0.0,<=3.0.0alpha1",
+        "pear-pear.horde.org/Horde_Translation": ">=2.2.0@stable,<=3.0.0alpha1@stable"
         "pear-pear.horde.org/Horde_Util": ">=2.0.0,<=3.0.0alpha1",
         "pear-pear.horde.org/Horde_Kolab_Server": ">=2.0.0,<=3.0.0alpha1",
         "pear-pear.horde.org/Horde_Kolab_Storage": ">=2.0.0,<=3.0.0alpha1"
