--- a/doc/horde.yml
+++ b/doc/horde.yml
@@ -1,6 +1,6 @@
 ---
 id: Kolab_Resource
 name: Kolab_Resource
-full: Resource management for the Kolab server
+full: Kolab resource management library
 description: This package allows booking of Kolab server resources.
 list: dev
