--- a/composer.json
+++ b/composer.json
@@ -12,21 +12,21 @@
         }
     ],
     "version": "1.0.0alpha1",
-    "time": "2011-11-13",
+    "time": "2014-10-21",
     "repositories": [
         {
             "type": "pear",
-            "url": "https://pear.horde.org"
+            "url": "http://pear.horde.org"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": "^5.3,<8",
         "pear-pear.php.net/HTTP_Request": "*",
-        "pear-pear.horde.org/Horde_Icalendar": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Mime": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Translation": ">=2.2.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Util": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Kolab_Server": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Kolab_Storage": ">=2.0.0,<=3.0.0alpha1"
+        "pear-pear.horde.org/Horde_Icalendar": "^2",
+        "pear-pear.horde.org/Horde_Mime": "^2",
+        "pear-pear.horde.org/Horde_Kolab_Server": "^2",
+        "pear-pear.horde.org/Horde_Kolab_Storage": "^2",
+        "pear-pear.horde.org/Horde_Translation": "^2.2",
+        "pear-pear.horde.org/Horde_Util": "^2"
     }
 }
