--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^5.3,<8",
+        "php": "^5.3 || ^7",
         "pear-pear.php.net/HTTP_Request": "*",
         "pear-pear.horde.org/Horde_Icalendar": "^2",
         "pear-pear.horde.org/Horde_Mime": "^2",
@@ -28,5 +28,14 @@
         "pear-pear.horde.org/Horde_Kolab_Storage": "^2",
         "pear-pear.horde.org/Horde_Translation": "^2.2",
         "pear-pear.horde.org/Horde_Util": "^2"
+    },
+    "replace": {
+        "pear-pear.horde.org/Horde_Kolab_Resource": "1.*",
+        "pear-horde/Horde_Kolab_Resource": "1.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Horde_Kolab_Resource": "lib/"
+        }
     }
 }
