Add type parameter to .horde.yml files.

--- a/.horde.yml
+++ b/.horde.yml
@@ -4,3 +4,4 @@ name: Kolab_Resource
 full: Kolab resource management library
 description: This package allows booking of Kolab server resources.
 list: dev
+type: library
