--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2014-10-21</date>
+ <date>2017-10-17</date>
  <version>
   <release>1.0.0alpha1</release>
   <api>1.0.0</api>
@@ -30,15 +30,6 @@
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <dir name="doc">
-    <dir name="Horde">
-     <dir name="Kolab">
-      <dir name="Resource">
-       <file name="COPYING" role="doc" />
-      </dir> <!-- /doc/Horde/Kolab/Resource -->
-     </dir> <!-- /doc/Horde/Kolab -->
-    </dir> <!-- /doc/Horde -->
-   </dir> <!-- /doc -->
    <dir name="lib">
     <dir name="Horde">
      <dir name="Kolab">
@@ -328,7 +319,8 @@
      </dir> <!-- /test/Horde/Kolab -->
     </dir> <!-- /test/Horde -->
    </dir> <!-- /test -->
-   <file name="TODO" role="data" />
+   <file name="LICENSE" role="doc" />
+   <file name="TODO" role="php" />
   </dir> <!-- / -->
  </contents>
  <dependencies>
@@ -391,16 +383,15 @@
  </dependencies>
  <phprelease>
   <filelist>
-   <install as="COPYING" name="doc/Horde/Kolab/Resource/COPYING" />
    <install as="Horde/Kolab/Resource.php" name="lib/Horde/Kolab/Resource.php" />
    <install as="Horde/Kolab/Resource/Epoch.php" name="lib/Horde/Kolab/Resource/Epoch.php" />
    <install as="Horde/Kolab/Resource/Exception.php" name="lib/Horde/Kolab/Resource/Exception.php" />
    <install as="Horde/Kolab/Resource/Freebusy.php" name="lib/Horde/Kolab/Resource/Freebusy.php" />
-   <install as="Horde/Kolab/Resource/Reply.php" name="lib/Horde/Kolab/Resource/Reply.php" />
-   <install as="Horde/Kolab/Resource/Translation.php" name="lib/Horde/Kolab/Resource/Translation.php" />
    <install as="Horde/Kolab/Resource/Freebusy/Kolab.php" name="lib/Horde/Kolab/Resource/Freebusy/Kolab.php" />
    <install as="Horde/Kolab/Resource/Freebusy/Mock.php" name="lib/Horde/Kolab/Resource/Freebusy/Mock.php" />
-   <install as="locale/Horde_Kolab_Resource.pot" name="locale/Horde_Kolab_Resource.pot" />
+   <install as="Horde/Kolab/Resource/Reply.php" name="lib/Horde/Kolab/Resource/Reply.php" />
+   <install as="Horde/Kolab/Resource/Translation.php" name="lib/Horde/Kolab/Resource/Translation.php" />
+   <install as="LICENSE" name="LICENSE" />
    <install as="locale/ar/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/ar/LC_MESSAGES/Horde_Kolab_Resource.mo" />
    <install as="locale/ar/LC_MESSAGES/Horde_Kolab_Resource.po" name="locale/ar/LC_MESSAGES/Horde_Kolab_Resource.po" />
    <install as="locale/bg/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/bg/LC_MESSAGES/Horde_Kolab_Resource.mo" />
@@ -433,6 +424,7 @@
    <install as="locale/gl/LC_MESSAGES/Horde_Kolab_Resource.po" name="locale/gl/LC_MESSAGES/Horde_Kolab_Resource.po" />
    <install as="locale/he/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/he/LC_MESSAGES/Horde_Kolab_Resource.mo" />
    <install as="locale/he/LC_MESSAGES/Horde_Kolab_Resource.po" name="locale/he/LC_MESSAGES/Horde_Kolab_Resource.po" />
+   <install as="locale/Horde_Kolab_Resource.pot" name="locale/Horde_Kolab_Resource.pot" />
    <install as="locale/hr/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/hr/LC_MESSAGES/Horde_Kolab_Resource.mo" />
    <install as="locale/hr/LC_MESSAGES/Horde_Kolab_Resource.po" name="locale/hr/LC_MESSAGES/Horde_Kolab_Resource.po" />
    <install as="locale/hu/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/hu/LC_MESSAGES/Horde_Kolab_Resource.mo" />
@@ -486,10 +478,10 @@
    <install as="locale/zh_TW/LC_MESSAGES/Horde_Kolab_Resource.mo" name="locale/zh_TW/LC_MESSAGES/Horde_Kolab_Resource.mo" />
    <install as="locale/zh_TW/LC_MESSAGES/Horde_Kolab_Resource.po" name="locale/zh_TW/LC_MESSAGES/Horde_Kolab_Resource.po" />
    <install as="Horde/Kolab/Resource/Autoload.php" name="test/Horde/Kolab/Resource/Autoload.php" />
+   <install as="Horde/Kolab/Resource/fixtures/recur_invitation.eml" name="test/Horde/Kolab/Resource/fixtures/recur_invitation.eml" />
    <install as="Horde/Kolab/Resource/phpunit.xml" name="test/Horde/Kolab/Resource/phpunit.xml" />
    <install as="Horde/Kolab/Resource/TestCase.php" name="test/Horde/Kolab/Resource/TestCase.php" />
-   <install as="Horde/Kolab/Resource/fixtures/recur_invitation.eml" name="test/Horde/Kolab/Resource/fixtures/recur_invitation.eml" />
-   <install as="TODO" name="TODO" />
+   <install as="" name="TODO" />
   </filelist>
  </phprelease>
  <changelog>
@@ -502,7 +494,7 @@
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2014-10-21</date>
+   <date>2017-10-17</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [jan] Mark PHP 7 as supported.
