--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-kolab-resource",
+    "name": "horde/kolab-resource",
     "description": "Resource management for the Kolab server",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -12,7 +12,7 @@
         }
     ],
     "version": "1.0.0alpha1",
-    "time": "2014-10-21",
+    "time": "2017-10-20",
     "repositories": [
         {
             "type": "pear",
