--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2017-10-20</date>
+ <date>2017-10-27</date>
  <version>
   <release>1.0.0alpha1</release>
   <api>1.0.0</api>
@@ -34,6 +34,7 @@
     <dir name="Horde">
      <dir name="Kolab">
       <dir name="Resource">
+       <file name="CHANGES" role="doc" />
        <file name="TODO.rst" role="doc" />
       </dir> <!-- /doc/Horde/Kolab/Resource -->
      </dir> <!-- /doc/Horde/Kolab -->
@@ -390,6 +391,7 @@
  </dependencies>
  <phprelease>
   <filelist>
+   <install as="CHANGES" name="doc/Horde/Kolab/Resource/CHANGES" />
    <install as="TODO.rst" name="doc/Horde/Kolab/Resource/TODO.rst" />
    <install as="Horde/Kolab/Resource.php" name="lib/Horde/Kolab/Resource.php" />
    <install as="Horde/Kolab/Resource/Epoch.php" name="lib/Horde/Kolab/Resource/Epoch.php" />
@@ -500,7 +502,7 @@
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2017-10-20</date>
+   <date>2017-10-27</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [jan] Mark PHP 7 as supported.
