--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "minimum-stability": "dev",
     "name": "horde/kolab_resource",
     "description": "Kolab resource management library",
     "type": "library",
@@ -21,12 +22,12 @@
     "require": {
         "php": "^7",
         "pear/http_request": "*",
-        "horde/icalendar": "^3",
-        "horde/mime": "^3",
-        "horde/kolab_server": "^3",
-        "horde/kolab_storage": "^3",
-        "horde/translation": "^3",
-        "horde/util": "^3"
+        "horde/icalendar": "^3 || dev-FRAMEWORK_6_0",
+        "horde/mime": "^3 || dev-FRAMEWORK_6_0",
+        "horde/kolab_server": "^3 || dev-FRAMEWORK_6_0",
+        "horde/kolab_storage": "^3 || dev-FRAMEWORK_6_0",
+        "horde/translation": "^3 || dev-FRAMEWORK_6_0",
+        "horde/util": "^3 || dev-FRAMEWORK_6_0"
     },
     "require-dev": {},
     "suggest": {},
