--- a/.horde.yml
+++ b/.horde.yml
@@ -23,12 +23,12 @@ license:
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
-    php: ^5.3 || ^7
-    pear:
-      pear.php.net/HTTP_Request: '*'
-      pear.horde.org/Horde_Icalendar: ^2
-      pear.horde.org/Horde_Mime: ^2
-      pear.horde.org/Horde_Kolab_Server: ^2
-      pear.horde.org/Horde_Kolab_Storage: ^2
-      pear.horde.org/Horde_Translation: ^2.2
-      pear.horde.org/Horde_Util: ^2
+    php: ^7
+    composer:
+      pear/http_request: '*'
+      horde/icalendar: ^3
+      horde/mime: ^3
+      horde/kolab_server: ^3
+      horde/kolab_storage: ^3
+      horde/translation: ^3
+      horde/util: ^3
