--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/kolab-resource",
+    "name": "horde/kolab_resource",
     "description": "Kolab resource management library",
     "type": "library",
     "homepage": "https://www.horde.org",
@@ -11,28 +11,25 @@
             "role": "lead"
         }
     ],
-    "version": "1.0.0alpha1",
-    "time": "2017-11-11",
+    "time": "2021-07-04",
     "repositories": [
         {
-            "type": "pear",
-            "url": "https://pear.horde.org"
+            "type": "composer",
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
-        "php": "^5.3 || ^7",
-        "pear-pear.php.net/HTTP_Request": "*",
-        "pear-pear.horde.org/Horde_Icalendar": "^2",
-        "pear-pear.horde.org/Horde_Mime": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Server": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Storage": "^2",
-        "pear-pear.horde.org/Horde_Translation": "^2.2",
-        "pear-pear.horde.org/Horde_Util": "^2"
+        "php": "^7",
+        "pear/http_request": "*",
+        "horde/icalendar": "^3",
+        "horde/mime": "^3",
+        "horde/kolab_server": "^3",
+        "horde/kolab_storage": "^3",
+        "horde/translation": "^3",
+        "horde/util": "^3"
     },
-    "replace": {
-        "pear-pear.horde.org/Horde_Kolab_Resource": "1.*",
-        "pear-horde/Horde_Kolab_Resource": "1.*"
-    },
+    "require-dev": {},
+    "suggest": {},
     "autoload": {
         "psr-0": {
             "Horde_Kolab_Resource": "lib/"
