--- a/.horde.yml
+++ b/.horde.yml
@@ -19,11 +19,11 @@ state:
   release: beta
   api: beta
 license:
-  identifier: LGPL-2.1
+  identifier: LGPL-2.1-only
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
-    php: ^7
+    php: ^7.4 || ^8
     composer:
       pear/http_request: '*'
       horde/icalendar: ^3
