--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,15 @@
     ],
     "require": {
         "php": "^5.3 || ^7",
-        "pear-pear.php.net/HTTP_Request": "*",
-        "pear-pear.horde.org/Horde_Icalendar": "^2",
-        "pear-pear.horde.org/Horde_Mime": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Server": "^2",
-        "pear-pear.horde.org/Horde_Kolab_Storage": "^2",
-        "pear-pear.horde.org/Horde_Translation": "^2.2",
-        "pear-pear.horde.org/Horde_Util": "^2"
+        "pear/http_request": "*",
+        "horde/icalendar": "^2",
+        "horde/mime": "^2",
+        "horde/kolab_server": "^2",
+        "horde/kolab_storage": "^2",
+        "horde/translation": "^2.2",
+        "horde/util": "^2"
     },
     "replace": {
-        "pear-pear.horde.org/Horde_Kolab_Resource": "1.*",
-        "pear-horde/Horde_Kolab_Resource": "1.*"
     },
     "autoload": {
         "psr-0": {
